--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Kelvin Khiew</strong>, Data Analyst SQL |Python | Tableau | Power BI <br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
 
@@ -32,7 +31,7 @@
 						</header>
 						<p>Data cleaning in SQL | Transforming data in Python | Forming trends in Tableau | Visualizing in Power BI</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://github.com/KelvinKhiew" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
@@ -57,9 +56,9 @@
 								<p>Identify trends in Covid, Movie, and Air BnB data. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/PowerBI.png" class="actions special"><img src="images/fulls/PowerBI.png"width=450" height="280"></a>
 								<h3>Visualizing with Power BI</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Coming Soon.</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -431,9 +430,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://github.com/KelvinKhiew" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/kelvinkhiew/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 						<li><a href=mailto:kelvin.khiew@outlook.com? class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
